--- a/app/src/main/res/layout/activity_parse.xml
+++ b/app/src/main/res/layout/activity_parse.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_activity_parse_previsions"
